# luminose-sleep-tools

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  agent.md  check_emg_vals.py  check_starts.py  compare_cropped.py  compare_eeg.py  environment.yml  find_lag.py  how_to_score.md  pyproject.toml  run_scope.py
docs/: Julia's Sleep Score protocol for Spike2.md  how_to_score.md
example_data/luminose/: LUMI-0013_2026-03-24_14_15_34_annotations.tsv  LUMI-0013_2026-03-25_18_01_27_annotations.tsv
examples/: classify_sleep.py  explore_features.py  quick_start.py  save_dataset.py  scope_demo.py  scope_video.py  scope_viewer.py
sleep_tools/: __init__.py  __main__.py  analysis.py  io.py  scope.py  sync.py  visualization.py
sleep_tools/scoring/: __init__.py  state.py
spike2-script/: OSD.s2cx
tests/: conftest.py  test_analysis.py  test_io.py  test_sync.py  test_visualization.py
validation/: check_data.py  check_eeg2.py  compare.py  compare_eeg_channels.py  compare_emg.py  compare_h5.py  compare_rms.py
