[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep-tools"
version = "0.1.0"
description = "Rodent sleep scoring from EDF electrophysiology recordings"
requires-python = ">=3.11"
dependencies = [
    "mne>=1.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "h5py>=3.8",
]

[project.optional-dependencies]
gui = ["PySide6>=6.10"]
# video export requires the ffmpeg system binary (not a Python package).
# Install via: conda install -c conda-forge ffmpeg
# or see environment.yml for the full conda environment.
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sleep_tools*"]
